// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test parseQuery with dates month range + single year 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$and": Array [
                    Object {
                      "travelEndYear": Object {
                        "$lte": 1700,
                      },
                    },
                    Object {
                      "travelStartYear": Object {
                        "$gte": 1700,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with dates month range + year range 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$or": Array [
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lte": 1780,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$gte": 1780,
                          },
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$or": Array [
                    Object {
                      "$or": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$exists": false,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$exists": false,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 10,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 10,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with dates month range 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$or": Array [
                    Object {
                      "$or": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$exists": false,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$exists": false,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 1,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 1,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with dates single month 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$and": Array [
                    Object {
                      "$or": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$exists": false,
                          },
                        },
                        Object {
                          "travelStartMonth": Object {
                            "$eq": 1,
                          },
                        },
                      ],
                    },
                    Object {
                      "$or": Array [
                        Object {
                          "travelEndMonth": Object {
                            "$exists": false,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$eq": NaN,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with dates single year 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$and": Array [
                    Object {
                      "travelEndYear": Object {
                        "$lte": 1700,
                      },
                    },
                    Object {
                      "travelStartYear": Object {
                        "$gte": 1700,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with dates single year and single month 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$and": Array [
                    Object {
                      "travelEndYear": Object {
                        "$lte": 1700,
                      },
                    },
                    Object {
                      "travelStartYear": Object {
                        "$gte": 1700,
                      },
                    },
                  ],
                },
                Object {
                  "$and": Array [
                    Object {
                      "$or": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$exists": false,
                          },
                        },
                        Object {
                          "travelStartMonth": Object {
                            "$eq": 5,
                          },
                        },
                      ],
                    },
                    Object {
                      "$or": Array [
                        Object {
                          "travelEndMonth": Object {
                            "$exists": false,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$eq": NaN,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`test parseQuery with dates year range 1`] = `
Object {
  "$and": Array [
    Object {
      "travels": Object {
        "$elemMatch": Object {
          "$or": Array [
            Object {
              "$and": Array [
                Object {
                  "$or": Array [
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lte": 1780,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$gte": 1780,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    },
  ],
}
`;
